objects/LLC_BI__Scenario__c.object
<CustomObject>
    <description>The Pro Forma for an opportunity.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is populated automatically when creating a scenario. This field
        specifies the account associated with the scenario.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annualized_Difference__c</fullName>
        <description>This field is populated automatically via formula. This field stores annualized total charge difference.</description>
        <formula>LLC_BI__Total_Charge_Difference__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Collected_Balance__c</fullName>
        <description>This field is populated automatically via formula. This field stores the difference of the average ledger balance and the average unavailable.</description>
        <formula>LLC_BI__Average_Ledger_Balance__c - LLC_BI__Average_Unavailable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Collected Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Ledger_Balance__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. This field represents the balance of a customer&apos;s bank account that is displayed on a bank statement</description>
        <label>Average Ledger Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Unavailable__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. This field represents that amount of unavailable funds on an account</description>
        <label>Less: Average Unavailable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balance_Required_To_Offset_Service__c</fullName>
        <description>This field is populated automatically via formula. This field stores the balance needed to pay the earnings credit allowance balance.</description>
        <formula>IF(LLC_BI__Earnings_Credit_Allowance__c &gt; 0, 1 / (LLC_BI__Earnings_Credit_Allowance__c * (DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)/360)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Required To Offset Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balance_Required__c</fullName>
        <description>This field is automatically populated via a trigger. It is calculated by adding the LLC_BI__Minimum_Required_Balance__c value together for each LLC_BI__Scenario_Item__c associated with the Scenario. This field represents the minimum dollar amount that a customer must have in an account in order to receive all services on the proforma.</description>
        <label>Less Balance Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Earnings_Credit_Allowance__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. This field stores a competitor&apos;s earnings credit allowance percentage.</description>
        <label>Competitor Earnings Credit Allowance (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Net_Charge__c</fullName>
        <description>This field is populated automatically via formula. This field stores the value of a competitor&apos;s net charge.</description>
        <formula>IF((LLC_BI__Competitor_Total_Charge__c - LLC_BI__Average_Collected_Balance__c * ( LLC_BI__Competitor_Earnings_Credit_Allowance__c /365) * 30 &gt; 0),
  (LLC_BI__Competitor_Total_Charge__c - LLC_BI__Average_Collected_Balance__c * ( LLC_BI__Competitor_Earnings_Credit_Allowance__c    /365) * 30) ,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Net Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Total_Charge__c</fullName>
        <description>This field is populated automatically via formula. This field stores the value of a competitor&apos;s total charge.</description>
        <formula>LLC_BI__Svc_Total__c +  LLC_BI__Total_Competitor_Difference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Total Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Conversion_Object__c</fullName>
        <description>This is a text field that stores the ID of the object from which the scenario is created</description>
        <label>Converted From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Difference_Total__c</fullName>
        <description>This field is populated automatically via formula. This field stores the difference between the net charge difference and the total charge difference.</description>
        <formula>LLC_BI__Total_Net_Charge_Difference__c -  LLC_BI__Total_Charge_Difference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Discount_Currency_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is populated automatically. This field stores the discounted amount of the entire performa.</description>
        <label>Discount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Discount_Percent_Total__c</fullName>
        <description>This field is populated automatically. This field stores the total percentage of discounts applied to the entire performa.</description>
        <formula>IF(LLC_BI__Total_Gross_Fee__c  &gt; 0, 1 - (LLC_BI__Svc_Total__c / LLC_BI__Total_Gross_Fee__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Earnings_Credit_Allowance_Amount__c</fullName>
        <description>This field is populated automatically via formula. It stores the calculation on the net funds available in a checking account and the credit amount can be used to offset all or a portion of monthly service charges.</description>
        <formula>IF(LLC_BI__Investable_Balance__c &lt; 0, 0, (LLC_BI__Earnings_Credit_Allowance__c / 12) * LLC_BI__Investable_Balance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earnings Credit Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Earnings_Credit_Allowance__c</fullName>
        <description>This field is not required and is populated manually. This field stores the total customer&apos;s percentage of earnings credit allowance for the proforma.</description>
        <label>Earnings Credit Allowance (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investable_Balance__c</fullName>
        <description>This field is populated automatically via formula. It stores the available balances to support services.</description>
        <formula>LLC_BI__Average_Collected_Balance__c - LLC_BI__Reserve_Requirement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investable Balance / (ECA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field marks this scenario as this proforma already having been converted to treasury services</description>
        <label>Is_Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Final__c</fullName>
        <description>This field is populated automatically via formula. This is a formula checkbox that is checked when proforma status changes to Final.</description>
        <formula>TEXT(LLC_BI__Status__c) = &apos;Final&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Amount_Due__c</fullName>
        <description>This field is populated automatically via formula. It stores the total sum of money due for the purchase of a service.</description>
        <formula>IF(LLC_BI__Earnings_Credit_Allowance_Amount__c &gt; LLC_BI__Svc_Total__c , LLC_BI__Svc_Total__c - LLC_BI__Earnings_Credit_Allowance_Amount__c, LLC_BI__Net_Deficit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Deficit__c</fullName>
        <description>This field is populated automatically via formula. It stores the difference between the the service total and the earnings credit allowance. This is the net amount due, unless the earnings credit allowance is more than the service total.</description>
        <formula>IF(LLC_BI__Earnings_Credit_Allowance_Amount__c &lt;= 0, LLC_BI__Svc_Total__c, LLC_BI__Svc_Total__c - LLC_BI__Earnings_Credit_Allowance_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Deficit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Investable_Excess_Deficit__c</fullName>
        <description>This field is populated automatically via formula. It stores the investable balance after the minimum balance required for services, if the initial investable balance is positive. Otherwise, it just shows the minimum balance required for services.</description>
        <formula>IF(LLC_BI__Investable_Balance__c &lt; 0 ,LLC_BI__Balance_Required__c, (LLC_BI__Investable_Balance__c - LLC_BI__Balance_Required__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Investable Excess / Deficit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is populated automatically when creating a scenario from opportunity. This field specifies the opportunity associated with the scenario.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Quantities__c</fullName>
        <description>Serialized data containing the product or product type id to the quantity of treasury services to create.</description>
        <label>Product Quantities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reserve_Requirement_Rate_Perc__c</fullName>
        <formula>LLC_BI__Reserve_Requirement_Rate__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reserve Requirement Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reserve_Requirement_Rate__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. This fields stores the percentage value that sets the minimum fraction of customer deposits and notes that each commercial bank must hold.</description>
        <label>Reserve Requirement Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reserve_Requirement__c</fullName>
        <description>This field is populated automatically via formula. This fields stores the amount that sets the minimum fraction of customer deposits and notes that each commercial bank must hold.</description>
        <formula>(LLC_BI__Average_Collected_Balance__c * LLC_BI__Reserve_Requirement_Rate__c) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reserve Requirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Url__c</fullName>
        <description>This field is populated automatically when the proforma is created. This field is a hyperlink. This field links to the Performa visualforce page where values from the scenario where imputed and calculated.</description>
        <formula>HYPERLINK(&quot;/apex/&quot; + $Label.LLC_BI__Namespace + &quot;__Scenario?id=&quot; + LLC_BI__Opportunity__r.Id + &quot;&amp;scenarioId=&quot; + Id, $Label.LLC_BI__View_Proforma)</formula>
        <label>Proforma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Setup_Fee__c</fullName>
        <description>The system automatically populates this currency field with the sum of scenario item records where the LLC_BI_Is_Monthly_c checkbox is not selected.</description>
        <label>Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Show_Competitor_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an optional field. It is populated based on the user selecting to show or hide the Competitor Pricing column on a scenario.</description>
        <label>Show Competitor Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Show_Exception_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an optional field. It is populated based on the user selecting to show or hide the Exception Pricing columns on a scenario.</description>
        <label>Show Exception Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is automatically set whenever a scenario record is created. It specifies the status of the scenario. It is usually updated via an approval process or workflow to drive automation of the scenario record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Svc_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is populated automatically via trigger. It stores the sum of the fee including discounts for all bill points. It details the total fee for all bill points.</description>
        <label>Service Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Balance_Required_Difference__c</fullName>
        <description>This field is automatically populated via trigger. It stores the difference between LLC_BI__Total_Balance_Required__c and Total_Competitor_Balance_Required__c.</description>
        <label>Total Balance Required Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Balance_Required__c</fullName>
        <description>This field is automatically populated via a trigger. It stores the annualized minimum required balance for all bill points in the scenario.</description>
        <label>Total Balance Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Charge_Difference__c</fullName>
        <description>This field is populated automatically via formula. It holds the value of expenses on a company&apos;s income statement that is either releated to debt that is deemed uncollectible.</description>
        <formula>LLC_BI__Competitor_Total_Charge__c -  LLC_BI__Svc_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Charge Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Competitor_Balance_Required__c</fullName>
        <description>This field is populated automatically via a trigger. It stores the competitor&apos;s annualized minimum required balance for all bill points in the scenario.</description>
        <label>Total Competitor Balance Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Competitor_Difference__c</fullName>
        <description>This field is populated automatically via a trigger. It stores the difference between your calculated fee (including discounts for all bill points) and the competitor&apos;s fees for all bill points</description>
        <label>Total Competitor Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Discount__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. It contains the discount percent applied to the total scenario, which is input on the proforma.</description>
        <label>Total Discount (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Gross_Fee__c</fullName>
        <description>This field is automatically calculated via a sum roll-up. It is the sum of the LLC_BI__Gross_Fee__c for all children LLC_BI__Scenario_Item__c. It stores the value of the gross fees associated to all bill points in the scenario.</description>
        <label>Total Gross Fee</label>
        <summarizedField>LLC_BI__Scenario_Item__c.LLC_BI__Gross_Fee__c</summarizedField>
        <summaryForeignKey>LLC_BI__Scenario_Item__c.LLC_BI__Scenario__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Net_Charge_Difference__c</fullName>
        <description>This field is populated automatically via formula. It stores the difference between a competitor&apos;s net charge and the net amount for this proforma.</description>
        <formula>LLC_BI__Competitor_Net_Charge__c -  LLC_BI__Net_Amount_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Charge Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Scenario</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>